Add test to ensure relations with empty or blank types can be deleted